--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,37 @@
       <classifier>sources</classifier>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+    	<groupId>com.google.guava</groupId>
+    	<artifactId>guava</artifactId>
+    	<version>13.0.1</version>
+    </dependency>
+    <dependency>
+  		<groupId>com.google.inject</groupId>
+  		<artifactId>guice</artifactId>
+  		<version>3.0</version>
+	</dependency>
+
+    <dependency>
+    	<groupId>com.google.gwt.inject</groupId>
+    	<artifactId>gin</artifactId>
+    	<version>2.0.0</version>
+    </dependency>
+  
+	<dependency>
+		<groupId>com.google.inject.extensions</groupId>
+		<artifactId>guice-servlet</artifactId>
+		<version>3.0</version>
+	</dependency>
+	
+	<dependency>
+    	<groupId>com.google.guava</groupId>
+    	<artifactId>guava-gwt</artifactId>
+    	<version>13.0.1</version>
+	</dependency>
   </dependencies>
+  
+  
   
   <build>
     <!-- Generate compiled stuff in the folder used for developing mode --> 
@@ -114,7 +144,6 @@
         <configuration>
           <additionalClasspathElements>
             <additionalClasspathElement>${project.build.sourceDirectory}</additionalClasspathElement>
-            <additionalClasspathElement>${project.build.testSourceDirectory}</additionalClasspathElement>
           </additionalClasspathElements>
           <useManifestOnlyJar>false</useManifestOnlyJar>
           <forkMode>always</forkMode>
