--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   
   <properties>
     <!-- Convenience property to set the GWT version -->
-    <gwtVersion>2.5.0</gwtVersion>
+    <gwtVersion>2.5.0-rc1</gwtVersion>
     <!-- GWT needs at least java 1.6 -->
     <maven.compiler.source>1.6</maven.compiler.source>
     <maven.compiler.target>1.6</maven.compiler.target>
