--- a/src/main/resources/org/fhw/asta/kasse/server/component/config/env-dev.properties
+++ b/src/main/resources/org/fhw/asta/kasse/server/component/config/env-dev.properties
@@ -1,7 +1,7 @@
 
-db.url = jdbc:mysql://192.168.178.150:3306/kasse
+db.url = jdbc:mysql://127.0.0.1:3306/kasse
 
-db.user = root
+db.user = application
 
 db.password = asta2012
 
