--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,12 @@
 			<version>4.1.7.Final</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.2</version>
+		</dependency>
+
 	</dependencies>
 
 
