checkout works, bitches!(mysql sucks!)

--- a/src/main/resources/org/fhw/asta/kasse/server/component/config/env-dev.properties
+++ b/src/main/resources/org/fhw/asta/kasse/server/component/config/env-dev.properties
@@ -1,4 +1,4 @@
-db.url = jdbc:mysql://192.168.178.244:3306/kasse
+db.url = jdbc:mysql://192.168.178.244:3306/kasse?characterEncoding=utf8
 
 db.user = application
 
